Fix ParseCIDRBlock() to no longer accept invalid inputs.

ParseCIDRBlock() currently accepts invalid inputs when the prefix contains a leading plus sign: "192.168.1.1/+1". This CL updates ParseCIDRBlock() to reject these inputs as invalid.

BUG=596258

Review URL: https://codereview.chromium.org/1816903002

Cr-Commit-Position: refs/heads/master@{#382366}

Former-commit-id: 8a14cbc731ec72162def8a3122a91ce1a235752b